feat: add basic hero section

--- a/index.html
+++ b/index.html
@@ -31,5 +31,13 @@
         <span></span>
       </div>
     </nav>
+
+    <section id="hero" class="hero">
+      <div class="hero-content">
+        <h1>Look Sharp. Stay Sharp.</h1>
+        <p>Your modern barber shop for precision cuts and premium grooming.</p>
+        <a href="#services" class="btn">Book an Appointment</a>
+      </div>
+    </section>
   </body>
 </html>
