feat: add services section along with icons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Razor is your modern barber shop for precision haircuts, sharp styles, and premium grooming. Look sharp, stay sharp. Book your appointment today."
     />
-    <link rel="icon" href="favicon.svg" type="image/x-icon" />
+    <link rel="icon" href="/images/favicon.svg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
@@ -37,6 +37,41 @@
         <h1>Look Sharp. Stay Sharp.</h1>
         <p>Your modern barber shop for precision cuts and premium grooming.</p>
         <a href="#services" class="btn">Book an Appointment</a>
+      </div>
+    </section>
+
+    <section id="services" class="services">
+      <div class="container">
+        <h2>Our Services</h2>
+        <p class="subtitle">
+          Precision cuts, clean shaves, and premium grooming.
+        </p>
+
+        <div class="services-grid">
+          <div class="service-card">
+            <img src="images/scissors.svg" alt="Haircut" />
+            <h3>Haircuts</h3>
+            <p>Modern styles and timeless classics, tailored to you.</p>
+          </div>
+
+          <div class="service-card">
+            <img src="images/razor.svg" alt="Shaves" />
+            <h3>Shaves</h3>
+            <p>Clean, smooth, and refreshing straight-razor shaves.</p>
+          </div>
+
+          <div class="service-card">
+            <img src="images/beard.svg" alt="Beard Trim" />
+            <h3>Beard Trims</h3>
+            <p>Keep your beard sharp and well-groomed.</p>
+          </div>
+
+          <div class="service-card">
+            <img src="images/grooming.svg" alt="Grooming Packages" />
+            <h3>Grooming Packages</h3>
+            <p>Complete care for hair, beard, and style in one session.</p>
+          </div>
+        </div>
       </div>
     </section>
   </body>
