feat: add pricing section

--- a/index.html
+++ b/index.html
@@ -74,5 +74,50 @@
         </div>
       </div>
     </section>
+
+    <section id="pricing" class="pricing">
+      <h2>Our Pricing</h2>
+      <p class="subtitle">Choose the plan that fits your style</p>
+
+      <div class="pricing-grid">
+        <div class="pricing-card">
+          <h3>Basic</h3>
+          <p class="price">$20<span>/visit</span></p>
+          <ul>
+            <li>✔ Classic haircut</li>
+            <li>✔ Quick styling</li>
+            <li>✔ Refreshing shampoo rinse</li>
+            <li>✔ Free hair color</li>
+          </ul>
+          <a href="#" class="btn">Book Now</a>
+        </div>
+
+        <!-- Pro -->
+        <div class="pricing-card popular">
+          <h3>Pro</h3>
+          <p class="price">$40<span>/visit</span></p>
+          <ul>
+            <li>✔ Precision haircut & style</li>
+            <li>✔ Beard trim or shave</li>
+            <li>✔ Hot towel treatment</li>
+            <li>✔ Premium hair products</li>
+          </ul>
+          <a href="#" class="btn">Book Now</a>
+        </div>
+
+        <!-- Premium -->
+        <div class="pricing-card">
+          <h3>Premium</h3>
+          <p class="price">$65<span>/visit</span></p>
+          <ul>
+            <li>✔ Full grooming package</li>
+            <li>✔ Haircut, beard trim & facial</li>
+            <li>✔ Scalp massage & conditioning</li>
+            <li>✔ Complimentary drink</li>
+          </ul>
+          <a href="#" class="btn">Book Now</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
