feat: add testimonials section

--- a/index.html
+++ b/index.html
@@ -119,5 +119,62 @@
         </div>
       </div>
     </section>
+
+    <section id="testimonials" class="testimonials">
+      <div class="container">
+        <h2>What Our Clients Say</h2>
+        <p class="subtitle">Hear from our happy customers</p>
+
+        <div class="testimonial-grid">
+          <div class="testimonial-card">
+            <p>
+              “Best haircut I’ve had in years. The barber really listened to
+              what I wanted and nailed the style.”
+            </p>
+            <h4>- James P.</h4>
+          </div>
+
+          <div class="testimonial-card">
+            <p>
+              “The Pro package is worth it. My beard has never looked sharper,
+              and the hot towel treatment was amazing.”
+            </p>
+            <h4>- Marco L.</h4>
+          </div>
+
+          <div class="testimonial-card">
+            <p>
+              “Premium service made me feel like royalty. Haircut, facial, scalp
+              massage — everything was perfect.”
+            </p>
+            <h4>- Daniel R.</h4>
+          </div>
+
+          <div class="testimonial-card">
+            <p>
+              “Great atmosphere and super friendly staff. I finally found my
+              go-to barber shop.”
+            </p>
+            <h4>- Alex K.</h4>
+          </div>
+
+          <div class="testimonial-card">
+            <p>
+              “I brought my son for his first haircut, and the team was amazing
+              with kids. He loved it!”
+            </p>
+            <h4>- Emma W.</h4>
+          </div>
+
+          <div class="testimonial-card">
+            <p>
+              “I brought my brother for his first haircut, and the entire
+              experience was amazing. I loved it!”
+            </p>
+            <h4>- Jackson H.</h4>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
